--- a/explorer/archive/docker-compose.yml
+++ b/explorer/archive/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:14  # CockroachDB cluster might be a better fit for production deployment
+    image: postgres:15  # CockroachDB cluster might be a better fit for production deployment
     restart: always
     volumes:
       - /var/lib/postgresql/data
@@ -12,30 +12,37 @@ services:
   ingest:
     depends_on:
       - db
-    restart: on-failure
+    restart: always
     image: subsquid/substrate-ingest:firesquid
     command: [
-       "-e", "wss://kusama-rpc.polkadot.io",
-       "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
+       # for Selendra Enpoint
+       "-e", "wss://rpc1.selendra.org",
+       "-c", "10", # allow up to 20 pending requests for the above endpoint (default is 5)
+      "-e", "wss://archive.selendra.org",
+       "-c", "10", # allow up to 20 pending requests for the above endpoint (default is 5)
+
+       # for local
+       "-e", "ws://127.0.0.1:9933",
+       "-c", "10", # allow up to 20 pending requests for the above endpoint (default is 5)
 
        # add another endpoint to increase archiving speed and reliability.
-       "-e", "wss://kusama-rpc.dwellir.com",
-
        #  "--start-block", "1000000", # uncomment to specify a non-zero start block
        "--out", "postgres://postgres:postgres@db:5432/squid-archive"
     ]
+    ports:
+      - "9090:9090" # prometheus port
 
   gateway:
     depends_on:
       - db
     image: subsquid/substrate-gateway:firesquid
     environment:
-      DATABASE_MAX_CONNECTIONS: 5
-      RUST_LOG: "actix_web=info,actix_server=info"
+      RUST_LOG: "substrate_gateway=info,actix_server=info"
     command: [
        "--database-url", "postgres://postgres:postgres@db:5432/squid-archive",
-       # "--evm-support" # uncomment for chains with Frontier EVM pallet
-                         # (e.g. Moonbeam/Moonriver or Astar/Shiden)
+       "--database-max-connections", "3", # max number of concurrent database connections
+       "--evm-support",
+       "--contracts-support"
     ]
     ports:
       - "8888:8000"
