--- a/explorer/docker-compose.yml
+++ b/explorer/docker-compose.yml
@@ -2,11 +2,9 @@ version: '3'
 
 services:
   db:
-    container_name: caller_squid_db
-    image: postgres:14
+    container_name: subsquid_db
+    image: postgres:15
     environment:
-      #      POSTGRES_DB: squid
-      #      POSTGRES_PASSWORD: squid
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
@@ -17,3 +15,4 @@ services:
 #      - ./data/db:/var/lib/postgresql/data
     env_file:
       - .env
+
