--- a/explorer/package.json
+++ b/explorer/package.json
@@ -20,12 +20,14 @@
     "@subsquid/substrate-processor": "^2.4.1",
     "@subsquid/typeorm-migration": "^0.1.6",
     "@subsquid/typeorm-store": "^0.2.2",
+    "@polkadot/api": "^10.9.1",
     "concurrently": "^7.5.0",
     "node-ipc": "^11.1.0",
     "uuid": "^9.0.0",
     "dotenv": "^16.0.0",
     "pg": "8.9.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "1.0.8",
