--- a/explorer/assets/account-config.json
+++ b/explorer/assets/account-config.json
@@ -1,16 +1,5 @@
 {
     "accountItems": [
-      "Balances.Transfer",
-      "Staking.Reward",
-      "Staking.Rewarded",
-      "Identity.rename_sub",
-      "Identity.set_subs",
-      "Identity.provide_judgement",
-      "Identity.set_identity",
-      "Identity.add_sub",
-      "Identity.clear_identity",
-      "Identity.kill_identity",
-      "Identity.IdentitySubRemoved",
-      "Identity.IdentitySubRevoked"
+      "Balances.Transfer"
     ]
   }
