--- a/explorer/package.json
+++ b/explorer/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@belopash/squid-tools": "^0.4.0",
     "@polkadot/api": "^10.9.1",
+    "@polkadot/api-contract": "^10.9.1",
     "@subsquid/archive-registry": "^3.1.0",
     "@subsquid/graphql-server": "^3.3.2",
+    "@subsquid/ink-abi": "^1.1.0",
     "@subsquid/processor-tools": "github:subsquid/typeorm-cache-store",
     "@subsquid/ss58": "^0.1.4",
     "@subsquid/substrate-processor": "^2.4.1",
@@ -24,6 +26,8 @@
     "@subsquid/typeorm-store": "^0.2.2",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.0",
+    "lru-cache": "^7.14.1",
+    "node-fetch": "^3.3.2",
     "node-ipc": "^11.1.0",
     "pg": "8.9.0",
     "type-graphql": "^1.1.1",
