--- a/explorer/package.json
+++ b/explorer/package.json
@@ -27,7 +27,7 @@
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.0",
     "lru-cache": "^7.14.1",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.7",
     "node-ipc": "^11.1.0",
     "pg": "8.9.0",
     "type-graphql": "^1.1.1",
@@ -38,6 +38,7 @@
     "@subsquid/substrate-metadata-explorer": "1.0.8",
     "@subsquid/substrate-typegen": "1.4.2",
     "@subsquid/typeorm-codegen": "0.2.2",
+    "@types/node-fetch": "^2.6.2",
     "@types/node": "16.11.56",
     "@types/node-ipc": "^9.2.0",
     "@types/uuid": "^8.3.4",
