add evm contract

--- a/explorer/package.json
+++ b/explorer/package.json
@@ -24,6 +24,8 @@
     "@subsquid/typeorm-store": "^0.2.2",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.0",
+    "ether": "^0.0.9",
+    "ethers": "^6.8.0",
     "node-ipc": "^11.1.0",
     "pg": "8.9.0",
     "type-graphql": "^1.1.1",
