--- a/explorer/package.json
+++ b/explorer/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.0",
     "ether": "^0.0.9",
     "ethers": "^6.8.0",
+    "evm": "^0.2.0",
     "node-ipc": "^11.1.0",
     "pg": "8.9.0",
     "type-graphql": "^1.1.1",
