--- a/explorer/package.json
+++ b/explorer/package.json
@@ -16,6 +16,7 @@
     "@belopash/squid-tools": "^0.4.0",
     "@polkadot/api": "^10.9.1",
     "@subsquid/archive-registry": "^3.1.0",
+    "@subsquid/evm-typegen": "^3.2.2",
     "@subsquid/graphql-server": "^3.3.2",
     "@subsquid/processor-tools": "github:subsquid/typeorm-cache-store",
     "@subsquid/ss58": "^0.1.4",
