--- a/explorer/package.json
+++ b/explorer/package.json
@@ -22,6 +22,7 @@
     "@subsquid/processor-tools": "github:subsquid/typeorm-cache-store",
     "@subsquid/ss58": "^0.1.4",
     "@subsquid/substrate-processor": "^2.4.1",
+    "@subsquid/substrate-runtime": "^1.0.1",
     "@subsquid/typeorm-migration": "^0.1.6",
     "@subsquid/typeorm-store": "^0.2.2",
     "@types/node-fetch": "^2.6.7",
